--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,19 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/compass"
-        app:layout_constraintBottom_toTopOf="@id/buttons"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@id/layout_labels"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/image_needle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/needle"
         android:padding="116dp"
-        app:layout_constraintTop_toTopOf="@id/image_compass"
+        android:src="@drawable/needle"
         app:layout_constraintBottom_toBottomOf="@id/image_compass"
+        app:layout_constraintEnd_toEndOf="@id/image_compass"
         app:layout_constraintStart_toStartOf="@id/image_compass"
-        app:layout_constraintEnd_toEndOf="@id/image_compass"/>
+        app:layout_constraintTop_toTopOf="@id/image_compass" />
 
     <TextView
         android:id="@+id/text_provideLatLng"
@@ -32,35 +32,58 @@
         android:gravity="center"
         android:padding="116dp"
         android:text="PROVIDE LAT AND LONG"
-        app:layout_constraintTop_toTopOf="@id/image_compass"
         app:layout_constraintBottom_toBottomOf="@id/image_compass"
+        app:layout_constraintEnd_toEndOf="@id/image_compass"
         app:layout_constraintStart_toStartOf="@id/image_compass"
-        app:layout_constraintEnd_toEndOf="@id/image_compass"/>
+        app:layout_constraintTop_toTopOf="@id/image_compass" />
 
+    <LinearLayout
+        android:id="@+id/layout_labels"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        app:layout_constraintBottom_toTopOf="@id/buttons">
+
+        <TextView
+            android:id="@+id/label_latitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal" />
+
+        <TextView
+            android:id="@+id/label_longitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="8dp">
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
             android:id="@+id/button_latitude"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/latitude"
             android:layout_weight="1"
-            style="@style/Widget.AppCompat.Button.Colored"/>
+            android:text="@string/latitude" />
 
         <Button
             android:id="@+id/button_longitude"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/longitude"
             android:layout_weight="1"
-            style="@style/Widget.AppCompat.Button.Colored"/>
+            android:text="@string/longitude" />
 
     </LinearLayout>
 
