--- a/app/src/main/res/layout/dialog_input.xml
+++ b/app/src/main/res/layout/dialog_input.xml
@@ -14,15 +14,13 @@
             android:id="@+id/editTextDialogLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:errorEnabled="true"
-            app:counterEnabled="true"
-            app:counterMaxLength="2000">
+            app:errorEnabled="true">
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/editTextDialog"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLength="2000"
-                android:inputType="textMultiLine"/>
+                android:maxLength="20"
+                android:inputType="numberSigned|numberDecimal"/>
         </android.support.design.widget.TextInputLayout>
 
     </ScrollView>
